--- a/Backend/antips/module-auth/build.gradle
+++ b/Backend/antips/module-auth/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.0.7'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'backend'
@@ -17,13 +19,19 @@ repositories {
 }
 
 dependencies {
+    implementation 'mysql:mysql-connector-java:8.0.17'  // MySQL JDBC 드라이버
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'  // 추가
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation project(':')
+    implementation project(':module-common')
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:2022.0.1')
+    implementation "io.jsonwebtoken:jjwt:0.9.1"
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 test {
