--- a/Backend/antips/module-service/build.gradle
+++ b/Backend/antips/module-service/build.gradle
@@ -17,14 +17,15 @@ repositories {
 }
 
 dependencies {
+    implementation 'mysql:mysql-connector-java:8.0.17'  // MySQL JDBC 드라이버
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'com.h2database:h2'
     //	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    implementation project(':')
-    runtimeOnly 'com.h2database:h2'  // H2 데이터베이스 의존성 추가
+
+    implementation project(':module-common')
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:2022.0.1')
 }
 
