--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,15 +1,13 @@
 # 빌드 스테이지
-FROM node:latest as builder
+FROM node:18-alpine as builder
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --legacy-peer-deps
+RUN npm install
 COPY . .
 RUN npm run build
 
-# 배포 스테이지
-FROM nginx:latest
-RUN rm -rf /etc/nginx/conf.d
-COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+# 프로덕션 스테이지
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
