--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "roslib": "^1.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -24,6 +25,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/roslib": "^1.3.5",
     "@types/serviceworker": "^0.0.119",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
