--- a/Backend/antips/module-service/build.gradle
+++ b/Backend/antips/module-service/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     //	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-
+    compileOnly 'org.projectlombok:lombok:1.18.30' // 최신 버전으로 변경
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     // Querydsl 의존성
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
