--- a/Backend/antips/module-service/Dockerfile
+++ b/Backend/antips/module-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk
+FROM openjdk:17
 ARG JAR_FILE=build/libs/module-service.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
