--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@breq/roslib": "^0.1.5",
     "@types/event-source-polyfill": "^1.0.5",
     "event-source-polyfill": "^1.0.31",
     "firebase": "^11.2.0",
