--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -8,6 +8,6 @@ RUN npm run build
 
 # 프로덕션 스테이지
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+# dist 폴더 COPY 제거 (볼륨 마운트로 대체)
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
