--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,2 @@
 VITE_FIREBASE_VAPID_KEY=BKh0wkKMFkZD2DRwKDgYsQkp9zv9jYOqIbA_O6-PiHX7wao5jr38OmnExn5sAf1o4y6m5jGVllYjRL1zLJMdb9s
-VITE_SERVER_URL=http://43.203.254.199:8080/api/v1/service
+VITE_SERVER_URL=https://www.antips.site/api/v1/service
