--- a/Backend/antips/module-service/build.gradle
+++ b/Backend/antips/module-service/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:2022.0.1')
 
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    testImplementation 'org.springframework.batch:spring-batch-test'
+
     // Firebase Admin SDK
     implementation 'com.google.firebase:firebase-admin:7.3.0'
 }
