--- a/Backend/antips/module-service/build.gradle
+++ b/Backend/antips/module-service/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 group = 'backend'
@@ -40,6 +41,14 @@ dependencies {
 
     // Firebase Admin SDK
     implementation 'com.google.firebase:firebase-admin:7.3.0'
+}
+sonarqube {
+    properties {
+        property "sonar.projectKey", System.getenv('SONAR_PROJECT_KEY')
+        property "sonar.host.url", System.getenv('SONAR_HOST_URL')
+        property "sonar.login", System.getenv('SONAR_LOGIN')
+
+    }
 }
 
 test {
