--- a/Backend/antips/module-auth/build.gradle
+++ b/Backend/antips/module-auth/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:2022.0.1')
     implementation "io.jsonwebtoken:jjwt:0.9.1"
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 }
 
